引用压缩js文件

--- a/myapp/templates/page/chart-1.html
+++ b/myapp/templates/page/chart-1.html
@@ -67,9 +67,9 @@
 </div>
 <!--引入百度地图的jssdk，这里需要使用你在百度地图开发者平台申请的 ak-->
 <script src="http://api.map.baidu.com/api?v=2.0&ak=t6FhPX8kta44hnWYUb9wN3sam3p2G6AG"></script>
-<script src="{% static 'js/echarts.js'%}"></script>
+<script src="{% static 'js/echarts.min.js'%}"></script>
 <!-- 引入百度地图扩展 -->
-<script src="{% static 'js/bmap.js'%}"></script>
+<script src="{% static 'js/bmap.min.js'%}"></script>
 <script src="{% static 'lib/layui-v2.5.5/layui.js'%}" charset="utf-8"></script>
 <script src="{% static 'js/lay-config.js'%}?v=1.0.4" charset="utf-8"></script>
 <script>
